# jsonpath-plus

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: bench_paths.json  benchmarks.rs  compare.rs  utils.rs
src/: ast.rs  error.rs  eval.rs  idx.rs  json.rs  lib.rs  main.rs  tests.rs  utils.rs
src/ast/: error.rs  eval.rs  parse.rs  span.rs  tests.rs  token.rs
src/json/: json_impl.rs  json_minimal_impl.rs  serde_impl.rs
