[package]
name = "jsonpath-plus"
version = "0.1.1"
edition = "2021"
categories = ["parser-implementations", "api-bindings"]
keywords = ["jsonpath", "json", "query"]
description = """A JSONPath implementation in Rust, compliant with the Proposal A specification as well as including
 several extensions such as parent and subpath selectors."""
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/CraftSpider/jsonpath-plus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.7"
serde_json = "1.0"
once_cell = "1.9"
