[package]
name = "jsonpath-plus"
version = "0.1.8"
edition = "2021"
categories = ["parser-implementations", "api-bindings"]
keywords = ["jsonpath", "json", "query"]
description = """A JSONPath implementation in Rust, compliant with the Proposal A specification as well as including
 several extensions such as parent and subpath selectors."""
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/CraftSpider/jsonpath-plus"

[dependencies]
chumsky = { version = "0.8", default-features = false }
serde_json = "1.0"
either = "1.6"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
criterion = { version = "0.3", features = ["html_reports"] }
pprof = { version = "0.6", features = ["flamegraph", "criterion"] }

[features]
# Whether the parsed paths should preserve token spans referencing where in the provided path they came from
spanned = []

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
